install/kyverno_policies/require-pod-requests-limits.yaml.signed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    cosign.sigstore.dev/message: H4sIAAAAAAAA/wB7AYT+H4sIAAAAAAAA/+ySzY7TMBDHc85TzBnJrd2GrsgFoZU49wL3wR4Vq7EdxuNK5elRvmAVVrsXBELK72J7/vOZzF5Cv7cp9Ew5+3hRgqwu3xUdzVGjObrGvNszfSueSfXJqeFOWbLqfPCSd3cMXfUyWmt9aprx1FqvT6PNqTLN8XB4aMyDMZU+vG3MqQL9St4/QsmCXGnNKclLfq/p6+H+E7D3n4mzT7GF6/1GHNPOp/3N1FcfXQuPXclCfE6dt/c6kKBDwbYGiBiohWU1VmtR557s4PUF7fXCqQy5hAvVAFw6yoOmIKDYr8N1gCmnwnbSJoYenjwVnJMbX1PxG3beoQzV59BRXMxLYKCc8UItPJ4/AUYHgULi+8+CsDQ/itMAgEzLcG43J+pRhDj+amiZcsGmKOgjcX5qVc+NNjEVW1th7rCF929W0tLq7yG2L8/ [...]
    cosign.sigstore.dev/signature: MEUCIQCGMhQMBAfsPRQ/CnqHhS3pxwcgjlnygzm1N6ZGqaHFPwIgcumjNYiq1KqJxWnX/nTlq7Ew7H/6i10faD80gJ5TXqY=
  name: require-requests-limits
spec:
  background: true
  rules:
  - match:
      resources:
        kinds:
        - Pod
    name: validate-resources
    validate:
      message: CPU and memory resource requests and limits are required.
      pattern:
        spec:
          containers:
          - resources:
              limits:
                memory: ?*
              requests:
                cpu: ?*
                memory: ?*
  validationFailureAction: audit
